# ifc-reader

./: CMakeLists.txt  LICENSE.MIT  README.md
.github/workflows/: push.yml
examples/dump-decls/: CMakeLists.txt  Presenter.cpp  Presenter.h  main.cpp
lib/blob-reader/: CMakeLists.txt
lib/blob-reader/include/ifc/: blob_reader.h
lib/blob-reader/src/: blob_reader.cpp
lib/core/: AbstractReference.ixx  Attribute.ixx  CMakeLists.txt  CallingConvention.ixx  Chart.ixx  ChartIndex.ixx  DeclIndex.ixx  Declaration.ixx  Environment.cpp  Environment.ixx  ExprIndex.ixx  Expression.ixx  File.cpp  File.ixx  FileFwd.h  FileHeader.ixx  Literal.ixx  Module.ixx  Name.ixx  NameIndex.ixx  NoexceptSpecification.ixx  Partition.ixx  Scope.ixx  SourceLocation.ixx  SyntaxIndex.ixx  SyntaxTree.ixx  Type.ixx  TypeIndex.ixx  Word.ixx  common_types.ixx  partition_defines.h
lib/core/include/ifc/: AbstractReference.h  Attribute.h  AttributeFwd.h  CallingConvention.h  Chart.h  ChartFwd.h  Declaration.h  DeclarationFwd.h  Environment.h  Expression.h  ExpressionFwd.h  File.h  FileHeader.h  Indices.h  Literal.h  Module.h  Name.h  NameFwd.h  NoexceptSpecification.h  Operator.h  Partition.h  Scope.h  SourceLocation.h  SyntaxTree.h  SyntaxTreeFwd.h  Trait.h  Type.h  TypeFwd.h  Word.h  WordFwd.h  accessors.h  common_types.h
lib/core/src/: Environment.cpp  File.cpp  accessors.cpp
lib/msvc/: CMakeLists.txt
lib/msvc/include/ifc/: MSVCEnvironment.h
lib/msvc/src/: MSVCEnvironment.cpp
lib/reflifc/: CMakeLists.txt
lib/reflifc/include/reflifc/: Attribute.h  Chart.h  Declaration.h  Expression.h  HashCombine.h  Literal.h  Module.h  Name.h  Query.h  RangeOf.h  StringLiteral.h  Syntax.h  TemplateId.h  TupleView.h  Type.h  ViewOf.h  Word.h
lib/reflifc/include/reflifc/decl/: AliasDeclaration.h  ClassOrStruct.h  Concept.h  DeclarationReference.h  Enumeration.h  Enumerator.h  Field.h  Function.h  Intrinsic.h  Namespace.h  Parameter.h  Scope.h  ScopeDeclaration.h  Specialization.h  TemplateDeclaration.h  UsingDeclaration.h  Variable.h
lib/reflifc/include/reflifc/expr/: Alignof.h  Call.h  Dyad.h  Monad.h  Path.h  ProductValueType.h  QualifiedName.h  Read.h  RequiresExpression.h  Sizeof.h  UnqualifiedId.h
lib/reflifc/include/reflifc/syntax/: TemplateId.h  TypeId.h  TypeSpecifier.h  TypeTraitIntrinsic.h
lib/reflifc/include/reflifc/type/: Array.h  Base.h  Expansion.h  Forall.h  Function.h  Placeholder.h  Pointer.h  Qualified.h  Reference.h
lib/reflifc/src/: Attribute.cpp  Attribute.ixx  Chart.cpp  Chart.ixx  Declaration.cpp  Declaration.ixx  Expression.cpp  Expression.ixx  HashCombine.ixx  Literal.ixx  Module.ixx  Name.cpp  Name.ixx  Query.ixx  Reflifc.ixx  ScopeDeclaration.h  StringLiteral.cpp  StringLiteral.ixx  Syntax.cpp  Syntax.ixx  TemplateId.cpp  TemplateId.ixx  TupleView.cpp  TupleView.ixx  Type.cpp  Type.ixx  ViewOf.ixx  Word.cpp  Word.ixx
lib/reflifc/src/decl/: AliasDeclaration.cpp  AliasDeclaration.ixx  ClassOrStruct.cpp  ClassOrStruct.ixx  Concept.cpp  Concept.ixx  DeclarationReference.cpp  DeclarationReference.ixx  Enumeration.cpp  Enumeration.ixx  Enumerator.cpp  Enumerator.ixx  Field.cpp  Field.ixx  Function.cpp  Function.ixx  Intrinsic.ixx  Namespace.ixx  Parameter.cpp  Parameter.ixx  Scope.ixx  ScopeDeclaration.cpp  ScopeDeclaration.ixx  Specialization.cpp  Specialization.ixx  TemplateDeclaration.cpp  TemplateDeclaration.ixx  UsingDeclaration.cpp  UsingDeclaration.ixx  Variable.cpp  Variable.ixx
lib/reflifc/src/expr/: Alignof.cpp  Alignof.ixx  Call.cpp  Call.ixx  Dyad.cpp  Dyad.ixx  Monad.cpp  Monad.ixx  Path.cpp  Path.ixx  ProductValueType.cpp  ProductValueType.ixx  QualifiedName.ixx  Read.cpp  Read.ixx  RequiresExpression.ixx  Sizeof.cpp  Sizeof.ixx  UnqualifiedId.cpp  UnqualifiedId.ixx
lib/reflifc/src/syntax/: TemplateId.cpp  TemplateId.ixx  TypeId.cpp  TypeId.ixx  TypeSpecifier.cpp  TypeSpecifier.ixx  TypeTraitIntrinsic.ixx
lib/reflifc/src/type/: Array.cpp  Array.ixx  Base.ixx  Expansion.cpp  Expansion.ixx  Forall.cpp  Forall.ixx  Function.cpp  FunctionType.ixx  Placeholder.cpp  Placeholder.ixx  Pointer.ixx  Qualified.cpp  Qualified.ixx  Reference.ixx
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/data/: attributes.ixx.ifc  empty.ixx
tests/core/src/: main.cpp
tests/msvc/: CMakeLists.txt
tests/msvc/data/: A.ixx  A.ixx.ifc  A.ixx.ifc.d.json  A_B.ixx  A_B.ixx.ifc  C.ixx  C.ixx.ifc  Transitive.ixx  Transitive.ixx.ifc  Transitive.ixx.ifc.d.json  TransitiveB.ixx  TransitiveB.ixx.ifc  TransitiveC.ixx.ifc  empty.ixx.ifc  empty.ixx.ifc.d.json
tests/msvc/src/: main.cpp
tests/reflifc/: CMakeLists.txt
tests/reflifc/data/: attributes.ixx  class-bases.ixx  class-bases.ixx.ifc  class-specialization.ixx  class-specialization.ixx.ifc  template-reference.ixx  template-reference.ixx.ifc  tuple-expr-view-empty.ixx  tuple-expr-view-empty.ixx.ifc  tuple-expr-view-single-element.ixx  tuple-expr-view-single-element.ixx.ifc
tests/reflifc/src/: main.cpp
